# qgroundcontrol

./: .gitignore  .gitmodules  qgroundcontrol.pro  qgroundcontrol.qrc
android/: AndroidManifest.xml
android/res/xml/: file_paths.xml  network_security_config.xml
android/src/: AndroidInterface.cc  AndroidInterface.h
deploy/: qgroundcontrol-start.sh
libs/OpenSSL/linux/: libcrypto.so.1.1  libssl.so.1.1
src/: QGCToolbox.cc  QGCToolbox.h  main.cc
src/FirmwarePlugin/: FirmwarePlugin.cc
src/QmlControls/: QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h
src/Settings/: AirlinkStreamBridge.SettingsGroup.json  AirlinkStreamBridgeSettings.cc  AirlinkStreamBridgeSettings.h  AppSettings.cc  AppSettings.h  CMakeLists.txt  SettingsManager.cc  SettingsManager.h
src/VideoReceiver/: GstVideoReceiver.cc  VideoReceiver.pri
src/comm/: CMakeLists.txt  LinkConfiguration.cc  LinkConfiguration.h  LinkManager.cc  UDPLink.cc  UDPLink.h
src/comm/CSKY/: AirlinkStreamBridge.pri
src/comm/CSKY/Airlink/: Airlink.cc  Airlink.cpp  Airlink.h  AirlinkConfiguration.cc  AirlinkConfiguration.h  AirlinkManager.cc  AirlinkManager.h  AirlinkTelemetry.cc  AirlinkTelemetry.h  AirlinkVideo.cc  AirlinkVideo.h  airlinkstreambridgemanager.cc  airlinkstreambridgemanager.h
src/comm/CSKY/Android/arm64-v8a/: Airlink.qrc
src/comm/CSKY/Android/armeabi-v7a/: Airlink.qrc
src/comm/CSKY/Android/x86/: Airlink.qrc
src/ui/: MainRootWindow.qml
src/ui/preferences/: CMakeLists.txt  GeneralSettings.qml  LinkSettings.qml
src/ui/preferences/CSKY/: AirlinkSettings.qml
